# actix-scaffolding

./: .env-example  Cargo.toml  README  README.md
src/: main.rs
src/config/: auth.rs  config.rs  database.rs  email.rs  helpers.rs  messages.rs  mod.rs  session.rs  socket_server.rs
src/controllers/: controller.rs  home.rs  mod.rs
src/grapqhl/: root.rs
src/models/: users.rs
templates/: error.html  notfound.html
