[package]
name = "actix-scaffolding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-session = {version = "0.9.0", features = ["cookie-session"]}
actix-web = "4.4.1"
chrono = "0.4.33"
diesel = {version = "2.1.4", features = ["postgres","r2d2","chrono","numeric"]}
dotenv = "0.15.0"
magic-crypt = "3.1.13"
sailfish = { version = "0.8.3", features = ["derive"]}
serde = "1.0.196"
